# open-pipe-media-player

./: CMakeLists.txt  README.md  draft4.c  main3.c  main4.c
.github/workflows/: github-actions-demo.yml
drafts/: draft1-2.c
